# ha-pvgis-solar-forecast

./: AGENTS.md  README.md  hacs.json  pyproject.toml
.github/workflows/: test.yml
custom_components/pvgis_solar_forecast/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  energy.py  manifest.json  pvgis.py  sensor.py  strings.json
custom_components/pvgis_solar_forecast/translations/: cs.json  en.json
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_clear_sky_scaling.py  test_config_flow.py  test_coordinator.py  test_energy.py  test_init.py  test_persistence.py  test_pvgis.py  test_sensor.py  test_snow_detection.py
