[project]
name = "ha-pvgis-solar-forecast"
requires-python = ">=3.13"

[tool.codespell]
ignore-words-list = "hass"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
required-version = ">=0.12.1"

[tool.ruff.lint]
ignore = [
    "ASYNC109",
    "ASYNC110",
    "D202",
    "D203",
    "D213",
    "D406",
    "D407",
    "E501",
    "PLC1901",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLW1641",
    "PLW2901",
    "PT011",
    "PT018",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF015",
    "SIM102",
    "SIM103",
    "SIM108",
    "SIM115",
    "TC001",
    "TC002",
    "TC003",
    "TC006",
    "TRY003",
    "TRY400",
    "UP046",
    "UP047",
    "UP049",
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "PLE0605",
]
select = [
    "A001",
    "ASYNC",
    "B002",
    "B005",
    "B007",
    "B009",
    "B014",
    "B015",
    "B017",
    "B018",
    "B023",
    "B024",
    "B026",
    "B032",
    "B035",
    "B904",
    "B905",
    "BLE",
    "C",
    "COM818",
    "D",
    "DTZ003",
    "DTZ004",
    "E",
    "F",
    "F541",
    "FLY",
    "FURB",
    "G",
    "I",
    "INP",
    "ISC",
    "ICN001",
    "LOG",
    "N804",
    "N805",
    "N815",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF005",
    "RUF006",
    "RUF007",
    "RUF008",
    "RUF010",
    "RUF013",
    "RUF016",
    "RUF017",
    "RUF018",
    "RUF019",
    "RUF020",
    "RUF021",
    "RUF022",
    "RUF023",
    "RUF024",
    "RUF026",
    "RUF030",
    "RUF032",
    "RUF033",
    "RUF034",
    "RUF100",
    "RUF101",
    "RUF200",
    "S102",
    "S103",
    "S108",
    "S306",
    "S307",
    "S313",
    "S314",
    "S315",
    "S316",
    "S317",
    "S318",
    "S319",
    "S601",
    "S602",
    "S604",
    "S608",
    "S609",
    "SIM",
    "SLF",
    "SLOT",
    "T100",
    "T20",
    "TC",
    "TID",
    "TRY",
    "UP",
    "UP031",
    "UP032",
    "W",
]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
voluptuous = "vol"
"homeassistant.helpers.config_validation" = "cv"
"homeassistant.util.dt" = "dt_util"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"async_timeout".msg = "use asyncio.timeout instead"
"pytz".msg = "use zoneinfo instead"
"tests".msg = "You should not import tests"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["homeassistant"]
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.pydocstyle]
convention = "google"
property-decorators = ["propcache.api.cached_property"]
